--- a/src/shellbale.1
+++ b/src/shellbale.1
@@ -76,9 +76,6 @@ Success
 .B 1
 Various errors (invalid arguments, file access errors, hash verification failures)
 .SH AUTHOR
-Written by the shellbale development team.
-.SH BUGS
-Report bugs at: https://github.com/yourusername/shellbale/issues
+Written by ahost.win
 .SH COPYRIGHT
-Copyright \(co 2024 shellbale developers.
-Licensed under MIT License. 
+Licensed under LGPLv3 License. 
